--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(200,200,200);
+    background-color: rgb(52, 107, 67);
     color: rgb(0,0,0);
     font-family: "Open Sans", cursive;
     text-align: center;
